# Rust_API_Project

./: .env  Cargo.toml  README.md  sqlite.db  sqlx-data.json
migrations/: 20221203231817_setup.down.sql  20221203231817_setup.up.sql
src/: main.rs  models.rs
src/handlers/: handlers_inner.rs
src/persistance/: answers_dao.rs  questions_dao.rs  tests.rs
