[package]
name = "Rust_API_Project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
sqlx = { version = "0.8.1", features = [ "runtime-tokio-rustls" , "sqlite", "time", "uuid"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
